# PDF-toolkit

./: .gitignore  README.md  pyproject.toml
configs/: page_images.default.yaml
pdf_toolkit/: .gitignore  __init__.py  __main__.py  manifest.py  pyproject.toml  requirements.txt  split.py  utils.py
pdf_toolkit-workroot/: .gitignore  _tmp_wr_test.py  boot.cmd  bootstrap.ps1  init.ps1  test_utils.py  workroot_tools.ps1
pdf_toolkit/configs/: page_images.default.yaml
pdf_toolkit/src/pdf_toolkit/: __init__.py  cli.py  config.py  page_images.py  render.py  rotate.py  split.py  test_config.py  test_core_robustness.py  test_page_images.py  test_utils.py
pdf_toolkit/tests/: test_config.py  test_core_robustness.py  test_page_images.py  test_utils.py
src/pdf-toolkit/: __init__.py  __main__.py  cli.py  config.py  manifest.py  page_images.py  render.py  rotate.py  split.py
tests/: helpers_cli.py  test_cli_sanity.py  test_config.py  test_core_robustness.py  test_page_images.py  test_utils.py
