[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_toolkit"
version = "0.1.0"
description = "Local, lightweight PDF tools (render, split, rotate)."
requires-python = ">=3.9"
dependencies = [
  "pymupdf>=1.23.0",
  "Pillow>=10.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
